Support threads for DragonFly in configure
* configure.ac [THREADS=posix && host=*-*-dragonfly*] (GC_THREADS,
_REENTRANT, PARALLEL_MARK, THREAD_LOCAL_ALLOC): Define similar
to *-*-freebsd*.

--- a/configure.ac
+++ b/configure.ac
@@ -184,9 +184,10 @@ case "$THREADS" in
     THREADS=posix
     # Common defines for most POSIX platforms.
     case "$host" in
-      *-*-aix* | *-*-cygwin* | *-*-darwin* | *-*-freebsd* | *-*-hpux11* | \
-      *-*-irix* | *-*-kfreebsd*-gnu | *-*-gnu* | *-*-*linux* | *-*-nacl* | \
-      *-*-netbsd* | *-*-openbsd* | *-*-osf* | *-*-solaris*)
+      *-*-aix* | *-*-cygwin* | *-*-darwin* | *-*-dragonfly* | \
+      *-*-freebsd* | *-*-hpux11* | *-*-irix* | *-*-kfreebsd*-gnu | \
+      *-*-gnu* | *-*-*linux* | *-*-nacl* | *-*-netbsd* | *-*-openbsd* | \
+      *-*-osf* | *-*-solaris*)
         AC_DEFINE(GC_THREADS)
         AC_DEFINE([_REENTRANT], [1],
                   [Required define if using POSIX threads.])
