Support threads for DragonFly in configure (back-port of commit 19c81d80 from 'master')
* configure.ac [THREADS=posix && host=*-*-dragonfly*] (GC_THREADS,
_REENTRANT, PARALLEL_MARK, THREAD_LOCAL_ALLOC): Define similar
to *-*-freebsd*.

--- a/configure.ac
+++ b/configure.ac
@@ -227,7 +227,7 @@ case "$THREADS" in
         THREADDLLIBS=-pthread
         AM_CFLAGS="$AM_CFLAGS -pthread"
         ;;
-     *-*-freebsd*)
+     *-*-dragonfly* | *-*-freebsd*)
         AC_MSG_WARN("FreeBSD does not yet fully support threads with Boehm GC.")
         AC_DEFINE(GC_FREEBSD_THREADS)
         AM_CFLAGS="$AM_CFLAGS -pthread"
