--- a/Makefile.direct
+++ b/Makefile.direct
@@ -364,8 +364,9 @@ if_not_there$(EXEEXT): $(srcdir)/tools/if_not_there.c
 
 clean:
 	rm -f gc.a *.i *.o *.exe tests/*.o gctest gctest_dyn_link test_cpp \
-	      setjmp_test  mon.out gmon.out a.out core if_not_there if_mach \
-	      base_lib c++ threadlibs $(CORD_OBJS) cord/cordtest cord/de
+	      setjmp_test mon.out gmon.out a.out core if_not_there if_mach \
+	      base_lib c++ $(CORD_OBJS) cord/cordtest cord/de \
+	      dont_ar_* threadlibs
 	-rm -f *~
 
 gctest$(EXEEXT): tests/test.o base_lib $(UTILS)
