--- a/.travis.yml
+++ b/.travis.yml
@@ -465,6 +465,7 @@ script:
             LDFLAGS="$LDFLAGS";
   fi
 - if [ -f gctest.log ]; then cat gctest.log; fi
+- if [ -f threadkey_test.log ]; then cat threadkey_test.log; fi
 - if [[ "$CSA_CHECK" == true ]]; then
     ${CC} --analyze -Xanalyzer -analyzer-output=text -Werror
         -I include -I libatomic_ops/src $CFLAGS_EXTRA
