--- a/.travis.yml
+++ b/.travis.yml
@@ -560,6 +560,7 @@ script:
             CFLAGS_EXTRA="$CFLAGS_EXTRA";
   fi
 - if [ -f gctest.log ]; then cat gctest.log; fi
+- if [ -f threadkey_test.log ]; then cat threadkey_test.log; fi
 - if [[ "$CSA_CHECK" == true ]]; then
     ${CC} --analyze -Xanalyzer -analyzer-output=text -Werror
         -I include -I libatomic_ops/src $CFLAGS_EXTRA
