--- a/include/include.am
+++ b/include/include.am
@@ -35,6 +35,7 @@ dist_noinst_HEADERS += \
         include/cord.h \
         include/cord_pos.h \
         include/ec.h \
+        include/gc_alloc_ptrs.h \
         include/new_gc_alloc.h \
         include/private/darwin_semaphore.h \
         include/private/darwin_stop_world.h \
