windows-untested: Add gc_alloc_ptrs.h source file

--- a/windows-untested/vc70/libgc.vcproj
+++ b/windows-untested/vc70/libgc.vcproj
@@ -237,6 +237,9 @@
                 RelativePath="..\..\include\private\msvc_dbg.h">
             </File>
             <File
+                RelativePath="..\..\include\gc_alloc_ptrs.h">
+            </File>
+            <File
                 RelativePath="..\..\include\new_gc_alloc.h">
             </File>
             <File
