Fix 'pthreads not supported by GC' configure error for DragonFly and Haiku (fix of commits 19c81d8, 847927f)
Issue #97 (bdwgc).

* configure.ac [$THREADS=pthreads && ($host=*-*-dragonfly*
|| $host=*-*-haiku*)]: Do not AC_MSG_ERROR (i.e. use the default
THREADDLLIBS).

--- a/configure.ac
+++ b/configure.ac
@@ -202,7 +202,8 @@ case "$THREADS" in
     esac
     AC_CHECK_LIB(pthread, pthread_self, THREADDLLIBS="-lpthread",,)
     case "$host" in
-      *-*-aix* | *-*-irix* | *-*-*linux* | *-*-nacl*)
+      *-*-aix* | *-*-dragonfly* | *-*-haiku* | *-*-irix* | *-*-*linux* | \
+      *-*-nacl*)
         # The default THREADDLLIBS.
         ;;
       *-*-hpux11*)
