Accept Android platform by both CMake and configure (fix of commit 1680d91)
* CMakeLists.txt (_HOST): Adjust FIXME comment.
* CMakeLists.txt (HOST): Remove replacement of "android" to "linux".
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && HOST=*-*-android*]:
Define GC_THREADS and _REENTRANT macros.
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && HOST=*-*-android*
&& enable_parallel_mark]: Define PARALLEL_MARK macro.
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && HOST=*-*-android*
&& enable_thread_local_alloc]: Define THREAD_LOCAL_ALLOC macro.
* configure.ac [$THREADS=posix && $host=*-*-android*] (GC_THREADS,
_REENTRANT): Define macro.
* configure.ac [$THREADS=posix && $host=*-*-android*
&& $enable_parallel_mark] (PARALLEL_MARK): Likewise.
* configure.ac [$THREADS=posix && $host=*-*-android*
&& $enable_thread_local_alloc] (THREAD_LOCAL_ALLOC): Likewise.

--- a/configure.ac
+++ b/configure.ac
@@ -185,7 +185,7 @@ case "$THREADS" in
     default_threadlibs=false
     # Common defines for most POSIX platforms.
     case "$host" in
-      *-*-aix* | *-*-cygwin* | *-*-darwin* | *-*-dragonfly* | \
+      *-*-aix* | *-*-android* | *-*-cygwin* | *-*-darwin* | *-*-dragonfly* | \
       *-*-freebsd* | *-*-haiku* | *-*-hpux11* | *-*-irix* | \
       *-*-kfreebsd*-gnu | *-*-gnu* | *-*-*linux* | *-*-nacl* | \
       *-*-netbsd* | *-*-openbsd* | *-*-osf* | *-*-solaris*)
