Enable handle-fork by default
Issue #174 (bdwgc).

* CMakeLists.txt (enable_handle_fork): New option (on by default).
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && enable_handle_fork]:
Define HANDLE_FORK macro for aix, cygwin, freebsd, haiku, hpux11,
irix, kfreebsd, linux, netbsd, openbsd, osf, solaris hosts.
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && HOST=*-*-darwin*
&& enable_handle_fork && enable_parallel_mark]: Define HANDLE_FORK
macro; add comment.
* configure.ac (AC_ARG_ENABLE(handle-fork)): Allow "auto" and "manual"
values; update help message.
* configure.ac [$enable_handle_fork!=yes && $enable_handle_fork!=no
&& $enable_handle_fork!=manual && $THREADS=posix]: Define HANDLE_FORK
macro for aix, cygwin, freebsd, haiku, hpux11, irix, kfreebsd, linux,
netbsd, openbsd, osf, solaris hosts (and also for darwin if
enable_parallel_mark); add comment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,8 @@ IF(enable_threads)
         SET(LIBS ${LIBS} ${Threads_LIBRARIES})
 ENDIF(enable_threads)
 
+OPTION(enable_handle_fork "Attempt to ensure a usable collector after fork()" ON)
+
 OPTION(enable_thread_local_alloc "Turn on thread-local allocation optimization" ON)
 
 OPTION(enable_parallel_mark "Parallelize marking and free list construction" ON)
@@ -104,10 +106,21 @@ IF(CMAKE_USE_PTHREADS_INIT)
                 MESSAGE("Only on NetBSD 2.0 or later.")
                 ADD_DEFINITIONS("-D_PTHREADS")
         ENDIF()
+        IF( HOST MATCHES .*-.*-aix.*|.*-.*-cygwin.*|.*-.*-.*freebsd.*|.*-.*-haiku.*|.*-.*-hpux11.*|.*-.*-irix.*|.*-.*-kfreebsd.*-gnu|.*-.*-.*linux.*|.*-.*-netbsd.*|.*-.*-openbsd.*|.*-.*-osf.*|.*-.*-solaris.*)
+                IF(enable_handle_fork)
+                    ADD_DEFINITIONS("-DHANDLE_FORK")
+                ENDIF(enable_handle_fork)
+        ENDIF()
         IF ( HOST MATCHES .*-.*-cygwin.*)
                 SET(SRC ${SRC} win32_threads.c)
         ENDIF()
         IF ( HOST MATCHES .*-.*-darwin.*)
+                IF(enable_handle_fork)
+                    # The incremental mode conflicts with fork handling.
+                    IF(enable_parallel_mark)
+                        ADD_DEFINITIONS("-DHANDLE_FORK")
+                    ENDIF(enable_parallel_mark)
+                ENDIF(enable_handle_fork)
                 SET(SRC ${SRC} darwin_stop_world.c)
                 #TODO
                 #darwin_threads=true
