--- a/.travis.yml
+++ b/.travis.yml
@@ -351,7 +351,7 @@ matrix:
     language: c
     env:
     - CFLAGS_EXTRA="-fsanitize=thread -D NO_CANCEL_SAFE -D NO_INCREMENTAL -D USE_SPIN_LOCK -fno-omit-frame-pointer -D TEST_FORK_WITHOUT_ATFORK"
-    - CONF_OPTIONS="--enable-gc-assertions"
+    - CONF_OPTIONS="--enable-gc-assertions --enable-handle-fork=manual"
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: linux
     addons:
@@ -364,7 +364,7 @@ matrix:
     language: c
     env:
     - CFLAGS_EXTRA="-fsanitize=thread -D NO_CANCEL_SAFE -D NO_INCREMENTAL -D USE_SPIN_LOCK -fno-omit-frame-pointer -D TEST_FORK_WITHOUT_ATFORK"
-    - CONF_OPTIONS="--enable-gc-assertions --enable-gc-debug --enable-large-config --with-libatomic-ops=no"
+    - CONF_OPTIONS="--enable-gc-assertions --enable-gc-debug --enable-handle-fork=manual --enable-large-config --with-libatomic-ops=no"
   - os: linux
     addons:
       apt:
@@ -376,7 +376,7 @@ matrix:
     language: c
     env:
     - CFLAGS_EXTRA="-fsanitize=thread -D NO_CANCEL_SAFE -D NO_INCREMENTAL -D USE_SPIN_LOCK -fno-omit-frame-pointer -D NTHREADS=15"
-    - CONF_OPTIONS="--disable-parallel-mark --enable-handle-fork --enable-munmap"
+    - CONF_OPTIONS="--disable-parallel-mark --enable-munmap"
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: linux
     addons:
@@ -389,7 +389,7 @@ matrix:
     language: c
     env:
     - CFLAGS_EXTRA="-fsanitize=thread -D NO_CANCEL_SAFE -D NO_INCREMENTAL -fno-omit-frame-pointer"
-    - CONF_OPTIONS="--disable-parallel-mark --disable-thread-local-alloc --disable-shared --enable-handle-fork --enable-gc-assertions --with-libatomic-ops=no"
+    - CONF_OPTIONS="--disable-parallel-mark --disable-thread-local-alloc --disable-shared --enable-gc-assertions --with-libatomic-ops=no"
   - os: linux
     addons:
       apt:
