Do not match kFreeBSD by FreeBSD host string pattern (CMake/configure) (code refactoring of commit 686a66731)
Issue #174 (bdwgc).

* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && enable_handle_fork]:
Replace ".*-.*-.*freebsd.*" to ".*-.*-freebsd.*".
* configure.ac [$enable_handle_fork=auto && $THREADS=posix]: Replace
"*-*-*freebsd*" to "*-*-freebsd*".

--- a/configure.ac
+++ b/configure.ac
@@ -865,7 +865,7 @@ elif test "${enable_handle_fork}" != manual -a x$THREADS = xposix; then
           AC_DEFINE(HANDLE_FORK)
         fi
         ;;
-      *-*-aix* | *-*-cygwin* | *-*-*freebsd* | *-*-haiku* | \
+      *-*-aix* | *-*-cygwin* | *-*-freebsd* | *-*-haiku* | \
       *-*-hpux11* | *-*-irix* | *-*-kfreebsd*-gnu | \
       *-*-*linux* | *-*-netbsd* | *-*-openbsd* | *-*-osf* | *-*-solaris*)
         AC_DEFINE(HANDLE_FORK)
