--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,7 +106,7 @@ IF(CMAKE_USE_PTHREADS_INIT)
                 MESSAGE("Only on NetBSD 2.0 or later.")
                 ADD_DEFINITIONS("-D_PTHREADS")
         ENDIF()
-        IF( HOST MATCHES .*-.*-aix.*|.*-.*-cygwin.*|.*-.*-.*freebsd.*|.*-.*-haiku.*|.*-.*-hpux11.*|.*-.*-irix.*|.*-.*-kfreebsd.*-gnu|.*-.*-.*linux.*|.*-.*-netbsd.*|.*-.*-openbsd.*|.*-.*-osf.*|.*-.*-solaris.*)
+        IF( HOST MATCHES .*-.*-aix.*|.*-.*-cygwin.*|.*-.*-freebsd.*|.*-.*-haiku.*|.*-.*-hpux11.*|.*-.*-irix.*|.*-.*-kfreebsd.*-gnu|.*-.*-.*linux.*|.*-.*-netbsd.*|.*-.*-openbsd.*|.*-.*-osf.*|.*-.*-solaris.*)
                 IF(enable_handle_fork)
                     ADD_DEFINITIONS("-DHANDLE_FORK")
                 ENDIF(enable_handle_fork)
