Turn on gcj, disclaim and java finalization by default (CMake)
* CMakeLists.txt (enable_gcj_support): Enable by default.
* CMakeLists.txt (enable_disclaim, enable_java_finalization): New
OPTION (on by default).
* CMakeLists.txt [enable_disclaim] (ENABLE_DISCLAIM): Define macro.
* CMakeLists.txt [enable_java_finalization] (JAVA_FINALIZATION):
Likewise.
* CMakeLists.txt [enable_disclaim] (SRC): Add fnlz_mlc.c entry.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,7 @@ IF(CMAKE_USE_WIN32_THREADS_INIT)
         SET(SRC ${SRC} win32_threads.c)
 ENDIF(CMAKE_USE_WIN32_THREADS_INIT)
 
-OPTION(enable_gcj_support "Support for gcj" NO)
+OPTION(enable_gcj_support "Support for gcj" ON)
 IF(enable_gcj_support)
         ADD_DEFINITIONS("-DGC_GCJ_SUPPORT")
         IF(enable_threads)
@@ -148,6 +148,17 @@ IF(enable_gcj_support)
         ENDIF(enable_threads)
         SET(SRC ${SRC} gcj_mlc.c)
 ENDIF(enable_gcj_support)
+
+OPTION(enable_disclaim "Support alternative finalization interface" ON)
+IF(enable_disclaim)
+    ADD_DEFINITIONS("-DENABLE_DISCLAIM")
+    SET(SRC ${SRC} fnlz_mlc.c)
+ENDIF(enable_disclaim)
+
+OPTION(enable_java_finalization "Support for java finalization" ON)
+IF(enable_java_finalization)
+    ADD_DEFINITIONS("-DJAVA_FINALIZATION")
+ENDIF(enable_java_finalization)
 
 OPTION(enable_gc_debug "Support for pointer back-tracing" NO)
 IF(enable_gc_debug)
