Comment out unused enable_cplusplus option in CMake script (code refactoring)
Note: gc_cpp.cc is always compiled by CMake.

* CMakeLists.txt (enable_cplusplus): Comment out OPTION.
* CMakeLists.txt (SRC): Move addition of gc_cpp.cc to a separate line.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ INCLUDE_DIRECTORIES(libatomic_ops/src)
 SET(SRC alloc.c reclaim.c allchblk.c misc.c mach_dep.c os_dep.c
         mark_rts.c headers.c mark.c obj_map.c blacklst.c finalize.c
         new_hblk.c dbg_mlc.c malloc.c stubborn.c dyn_load.c
-        typd_mlc.c ptr_chck.c mallocx.c gc_cpp.cc)
+        typd_mlc.c ptr_chck.c mallocx.c)
 SET(LIBS)
 OPTION(enable_threads "TODO" NO)
 IF(enable_threads)
@@ -73,7 +73,8 @@ OPTION(enable_parallel_mark "Parallelize marking and free list construction" ON)
 #       MESSAGE("Parallel mark requires enable_threads ON" )
 #ENDIF(Threads_FOUND)
 
-OPTION(enable_cplusplus "install C++ support" NO)
+#OPTION(enable_cplusplus "install C++ support" ON)
+SET(SRC ${SRC} gc_cpp.cc)
 
 SET(_HOST ${CMAKE_HOST_SYSTEM_PROCESSOR}--${CMAKE_SYSTEM}) #FIXME missing the vendor field.
 STRING(TOLOWER ${_HOST} HOST)
