--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ clone_depth: 50
 
 build_script:
   - git clone --depth=50 https://github.com/ivmai/libatomic_ops.git
-  - cmake -Denable_gc_assertions=ON .
+  - cmake -Denable_gc_assertions=ON
   - cmake --build . --config Debug
 
 test_script:
