Enable memory unmapping by default
Issue #152 (bdwgc).

* CMakeLists.txt (enable_munmap): New OPTION (on by default).
* CMakeLists.txt [enable_munmap] (USE_MMAP, USE_MUNMAP): Define macro.
* CMakeLists.txt [enable_checksums && enable_munmap): Issue MESSAGE
that CHECKSUMS is not compatible with USE_MUNMAP.
* configure.ac (AC_ARG_ENABLE(munmap)): Update the help message.
* configure.ac [$enable_munmap=""]: Treat as enable_munmap="yes".
* configure.ac [$MUNMAP_THRESHOLD=""]: Treat as MUNMAP_THRESHOLD="yes".
* doc/README.win32 (GNU Tools): Note about "--disable-munmap" option.
* doc/debugging.md (Unexpectedly Large Heap): Remove advice about
"--enable-munmap" option.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,6 +192,11 @@ IF(enable_redirect_malloc)
     ADD_DEFINITIONS("-DGC_USE_DLOPEN_WRAP")
 ENDIF(enable_redirect_malloc)
 
+OPTION(enable_munmap "Return page to the OS if empty for N collections" ON)
+IF(enable_munmap)
+    ADD_DEFINITIONS("-DUSE_MMAP -DUSE_MUNMAP")
+ENDIF(enable_munmap)
+
 OPTION(enable_large_config "Optimize for large heap or root set" NO)
 IF(enable_large_config)
     ADD_DEFINITIONS("-DLARGE_CONFIG")
@@ -204,7 +209,7 @@ ENDIF(enable_gc_assertions)
 
 OPTION(enable_checksums "Report erroneously cleared dirty bits" NO)
 IF(enable_checksums)
-    IF(enable_threads)
+    IF(enable_munmap OR enable_threads)
         MESSAGE("CHECKSUMS not compatible with USE_MUNMAP or threads")
     ENDIF(enable_threads)
     ADD_DEFINITIONS("-DCHECKSUMS")
