--- a/configure.ac
+++ b/configure.ac
@@ -898,9 +898,10 @@ fi
 
 AC_ARG_ENABLE(munmap,
     [AC_HELP_STRING([--enable-munmap=N],
-        [return page to the os if empty for N collections])],
+                    [Return page to the OS if empty for N collections
+                     (default: 6)])],
     MUNMAP_THRESHOLD=$enableval)
-if test x$enable_munmap != x -a x$enable_munmap != xno; then
+if test x$enable_munmap != xno; then
     AC_DEFINE([USE_MMAP], 1,
               [Define to use mmap instead of sbrk to expand the heap.])
     AH_TEMPLATE([USE_WINALLOC],
@@ -909,7 +910,7 @@ if test x$enable_munmap != x -a x$enable_munmap != xno; then
     AC_DEFINE([USE_MUNMAP], 1,
               [Define to return memory to OS with munmap calls
                (see doc/README.macros).])
-    if test "${MUNMAP_THRESHOLD}" = "yes"; then
+    if test x$MUNMAP_THRESHOLD = x -o x$MUNMAP_THRESHOLD = xyes; then
       MUNMAP_THRESHOLD=6
     fi
     AC_DEFINE_UNQUOTED([MUNMAP_THRESHOLD], [${MUNMAP_THRESHOLD}],
@@ -928,8 +929,7 @@ AC_ARG_ENABLE(checksums,
                      substantial performance cost; use only for debugging
                      of the incremental collector])])
 if test x$enable_checksums = xyes; then
-    if test x$enable_munmap != x -a x$enable_munmap != xno \
-            -o x$THREADS != xnone; then
+    if test x$enable_munmap != xno -o x$THREADS != xnone; then
         AC_MSG_ERROR([CHECKSUMS not compatible with USE_MUNMAP or threads])
     fi
     AC_DEFINE([CHECKSUMS], 1,
